--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,6 +80,7 @@
         <span class="skill">JavaScript</span>
         <span class="skill">jQuery</span>
         <span class="skill">PHP</span>
+        <span class="skill">Core Java</span>
         <span class="skill">Canva</span>
         <span class="skill">SEO</span>
         <span class="skill">Responsive design</span>
